--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearnWithHiSkyTechnologies"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Ui.Activity_Login"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".Ui.Activity_SignUp"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
